# ros2-gazebo-simple-motor-plugin

./: .gitignore  LICENSE  README.md  development_notes.md
docker/: README.md  dockerfile  setup_app.bash  setup_gazebo.bash  setup_ws.bash  start.bash  stop.bash  vars.bash
gazebo_ros_motor_plugin/: CMakeLists.txt  package.xml
gazebo_ros_motor_plugin/include/gazebo_ros_motor_plugin/: gazebo_ros_motor_plugin.hpp
gazebo_ros_motor_plugin/src/: gazebo_ros_motor_plugin.cpp
gazebo_ros_simple_motor/: CMakeLists.txt
gazebo_ros_simple_motor/src/: gazebo_ros_simple_motor.cpp
gazebo_ros_simple_motor/test/: test_gazebo_ros_simple_motor.cpp
gazebo_ros_simple_motor_msgs/msg/: MotorControl.msg
gazebo_ros_simple_motors/: CMakeLists.txt  package.xml
gazebo_ros_simple_motors/include/gazebo_ros_simple_motors/: gazebo_ros_simple_motors.hpp
gazebo_ros_simple_motors/src/: gazebo_ros_simple_motors.cpp
gazebo_ros_simple_motors/test/: test_gazebo_ros_simple_motors.cpp
gazebo_ros_simple_motors_msgs/: CMakeLists.txt  package.xml
gazebo_ros_simple_motors_msgs/msg/: MotorControl.msg
models/test_cam/: model.config
models/test_cam_drive/: model.config  model.sdf
models/test_motor/: model.config  model.sdf
release/gazebo_ros_simple_motor_msgs/include/gazebo_ros_simple_motor_msgs/msg/: motor_control.h  motor_control.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
release/gazebo_ros_simple_motor_msgs/include/gazebo_ros_simple_motor_msgs/msg/detail/: motor_control__builder.hpp  motor_control__functions.c  motor_control__functions.h  motor_control__rosidl_typesupport_fastrtps_c.h  motor_control__rosidl_typesupport_fastrtps_cpp.hpp  motor_control__rosidl_typesupport_introspection_c.h  motor_control__rosidl_typesupport_introspection_cpp.hpp  motor_control__struct.h  motor_control__struct.hpp  motor_control__traits.hpp  motor_control__type_support.c  motor_control__type_support.cpp  motor_control__type_support.h
